--- a/style.css
+++ b/style.css
@@ -16,7 +16,11 @@ body {
 a {
     text-decoration: none;
     color: #000;
-    text-decoration: underline;
+    border-bottom: #111 0.125em solid;
+}
+
+a:hover {
+    border-bottom: #111 0.17em solid;
 }
 
 #brand-name {
@@ -74,12 +78,43 @@ a {
     font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
-#article-text {
+.article-text {
     padding: 40px;
-    font-size: 25px;
+    font-size: 22px;
     color:#444;
     line-height: 1.7;
 }
+
+.article-between-text {
+    padding: 40px;
+    font-size: 25px;
+    color:#444;
+    line-height: 1.7; 
+}
+
+.image-container {
+    justify-content: center;
+    margin: 20px;
+}
+
+.image-footer {
+    margin: auto;
+    width: 55%;
+}
+
+.image-text {
+    font-family: 'Times New Roman', Times, serif;
+    font-size: 21px;
+}
+
+#portrait {
+    display: block;
+    width: 500px;
+    margin:auto;
+    width:55%;
+}
+
+
 
 #bib-title {
     margin: 50px;
@@ -87,6 +122,7 @@ a {
     text-align:center;
     font-family:'Times New Roman', Times, serif;
     font-size: 30px;
+    margin-top: 40px;
 }
 
 #bib-text {
