--- a/style.css
+++ b/style.css
@@ -55,7 +55,7 @@ a:hover {
 #article-title {
     font-size: 40px;
     padding: 20px;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif
 }
 
 #article-text-container {
@@ -67,8 +67,8 @@ a:hover {
 }
 
 #article-sub-title {
-    font-size: 25px;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 30px;
+    font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif
 }
 
 #article-by-line {
@@ -80,17 +80,12 @@ a:hover {
 
 .article-text {
     padding: 40px;
-    font-size: 22px;
+    font-size: 23.8px;
     color:#444;
-    line-height: 1.7;
+    line-height: 1.5;
+    font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif   
 }
 
-.article-between-text {
-    padding: 40px;
-    font-size: 25px;
-    color:#444;
-    line-height: 1.7; 
-}
 
 .image-container {
     justify-content: center;
