--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 #container {
-    background-color: #eeeeee88;
+    background-color: #eee;
     margin: auto;
     width: 82%;
     justify-content: center;
@@ -12,12 +12,11 @@
 
 
 body {
-    background-image: url("images/BG.jpg");
+    background-color: #fff;
+    /* background-image: url("images/BG.jpg");
     background-attachment: fixed;
     background-size: cover;
-    background-repeat: no-repeat;
-    background-color:#888;
-    transform: translateY(calc(-100% * var(--scroll-speed)));
+    background-repeat: no-repeat; */
 }
 
 a {
@@ -42,11 +41,11 @@ a:hover {
 }
 
 #article {
-    background-color: #eeeeeebb;
+    background-color: #fff;
     color: #222;
     font-family: Georgia, 'Times New Roman', Times, serif;
     margin:auto;
-    width: 85%;
+    width: 90%;
     padding-bottom: 100px;
 }
 
@@ -72,7 +71,7 @@ a:hover {
     padding: 50px;
     margin-left: auto;
     margin-right: auto;
-    width: 75%;
+    width: 77%;
     border-radius: 13px;
 }
 
@@ -122,13 +121,16 @@ a:hover {
 
 
 #bibliography {
-    border-radius: 20px;
+    border-radius: 8px;
     box-shadow: -5px -5px 100px rgba(0, 0, 0, 0.25);
     margin-bottom: 200px;
     margin-top: 200px;
     padding: 50px;
     background-color: #fff;
     color: #333;
+    margin-left: -10px;
+    margin-right: -10px;
+    margin-bottom: 200px;
 }
 
 .bib-element {
