--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@ a:hover {
 }
 
 #brand-name {
-    background-color: #fff;
+    background-color: #ddd;
     color:#222;
     font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
     font-size: 40px;
