--- a/style.css
+++ b/style.css
@@ -9,14 +9,8 @@
     background-color: #fff;
 }
 
-
-
 body {
     background-color: #fff;
-    /* background-image: url("images/BG.jpg");
-    background-attachment: fixed;
-    background-size: cover;
-    background-repeat: no-repeat; */
 }
 
 a {
@@ -30,14 +24,27 @@ a:hover {
 }
 
 #brand-name {
-    background-color: #ddd;
-    color:#222;
+    background: linear-gradient(to right, #ff9010, #ffe787);
+    box-shadow: -5px -5px 20px rgba(0, 0, 0, 0.25);
+    color:#fff;
     font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
     font-size: 40px;
     text-align: center;
     padding: 20px;
     margin: 30px;
     word-spacing: 0.6rem;
+}
+
+.pull-quote {
+    margin-top: -50px;
+    margin-bottom: 40px;
+    text-align: center;
+    width:60%;
+    margin-right: auto;
+    margin-left: auto;
+    font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    font-size: 28px;
+    color: #888;
 }
 
 #article {
@@ -60,7 +67,7 @@ a:hover {
 }
 
 #article-title {
-    font-size: 40px;
+    font-size: 50px;
     padding: 20px;
     font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif
 }
@@ -76,7 +83,8 @@ a:hover {
 }
 
 #article-sub-title {
-    font-size: 30px;
+    margin-top: -10px;
+    font-size: 28px;
     font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif
 }
 
@@ -115,7 +123,17 @@ a:hover {
 #portrait {
     display: block;
     width: 500px;
-    margin:auto;
+    margin-right: auto;
+    margin-left: auto;
+    margin-top: 130px;
+    width:55%;
+}
+
+#shapes {
+    display: block;
+    width: 500px;
+    margin-right: auto;
+    margin-left: auto;
     width:55%;
 }
 
@@ -124,13 +142,12 @@ a:hover {
     border-radius: 8px;
     box-shadow: -5px -5px 100px rgba(0, 0, 0, 0.25);
     margin-bottom: 200px;
-    margin-top: 200px;
+    margin-top: 100px;
     padding: 50px;
     background-color: #fff;
     color: #333;
-    margin-left: -10px;
-    margin-right: -10px;
-    margin-bottom: 200px;
+    margin-left: -50px;
+    margin-right: -50px;
 }
 
 .bib-element {
@@ -138,7 +155,7 @@ a:hover {
     font-family: 'Times New Roman', Times, serif;
     padding: 20px;
 
-    width:80%;
+    width:70%;
     margin: auto;
 }
 
@@ -154,5 +171,52 @@ a:hover {
     font-family:'Times New Roman', Times, serif;
     font-size: 30px;
     margin-top: 40px;
+}
+
+#author-bio-title {
+    box-shadow: -5px -5px 100px rgba(0, 0, 0, 0.25);
+    background-color: #fff;
+    padding: 20px;
+    border-left: solid 5px #444;
+    margin-bottom:100px;
+    margin-top:-120px;
+    text-align: center;
+    font-size: 30px;
+    color: #444;
+}
+
+#author-bio-text {
+    margin: auto;
+    width: 90%;
+    line-height: 1.4;
+}
+
+#author-bio {
+    margin-top: 80px;
+    box-shadow: -5px -5px 100px rgba(0, 0, 0, 0.25);
+    font-family: 'Times New Roman', Times, serif;
+    font-size: 25px;
+    padding: 100px;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+    color: #666;
+}
+
+#footer {
+    background-color: #bbbbbb33;
+    padding-top: 200px;
+    padding-bottom: 120px;
+    padding-left: 100px;
+    padding-right: 100px;
+    margin-top: 100px;
+}
+
+#copyright {
+    border-top: solid 1px #555;
+    padding: 50px;
+    text-align: center;
+    font-family: 'Times New Roman', Times, serif;
+    font-size: 22px;
 }
 
